# ma4825_robotics_project

ahman_robot_arm_description/: CMakeLists.txt  package.xml
ahman_robot_arm_description/config/: joint_names_ahman_robot_arm_description.yaml
ahman_robot_arm_description/launch/: display.launch  gazebo.launch
ahman_robot_arm_description/meshes/: base_link.STL  elbow_link.STL  gripper_power_link.STL  left_finger_link.STL  left_gear_link.STL  left_knuckle_link.STL  right_finger_link.STL  right_gear_link.STL  right_knuckle_link.STL  shoulder_link.STL  wrist_link.STL
ahman_robot_arm_description/urdf/: ahman_robot_arm_description.csv  ahman_robot_arm_description.urdf
ahman_robot_description/: CMakeLists.txt  package.xml
ahman_robot_description/config/: joint_names_ahman_robot_description.yaml  viewer_robot.rviz
ahman_robot_description/launch/: display.launch  (+1 more)
ahman_robot_openrave/: CMakeLists.txt  package.xml
ahman_robot_openrave/objects/: box_placement.kinbody.xml
ahman_robot_openrave/objects/meshes/: Box_Placement.STL  Camera_Conveyor_Assembly.STEP
ahman_robot_openrave/script/: test.py
ahman_robot_openrave/worlds/: pick_n_place.env.xml
cam_img/: CMakeLists.txt  package.xml
logitech_c270_assembly/: CMakeLists.txt  package.xml
logitech_c270_assembly/launch/: display.launch  gazebo.launch
logitech_c270_assembly/meshes/: base_link.STL  camera.STL  link1.STL
logitech_c270_assembly/urdf/: Logitech c270 Assembly.csv  logitech_c270_assembly.urdf.xacro
robot_arm_controller/: CMakeLists.txt  README.md  package.xml
robot_description/: package.xml
(+51 files in other folders)
