<?xml version="1.0"?>
<package format="2">
  <name>logitech_c270_assembly</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Logitech c270 Assembly</p>
    <p>This package contains configuration data, 3D models and launch files
for Logitech c270 Assembly robot</p>
  </description>
  
  <maintainer email="cheeyengsung@gmail.com">Chee Yeng Sung</maintainer>
  <author email="cheeyengsung@gmail.com">Chee Yeng Sung</author> 
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  
  <export>
    <architecture_independent />
  </export>
  
</package>
